Tue Jun  8 10:30:13 1993  Ian Lance Taylor  (ian@cygnus.com)

	* coff-mips.c (ecoff_compute_section_file_positions,
	ecoff_write_object_contents): Only round to page boundaries if
	D_PAGED flag is set for the output BFD.

Fri Jun  4 15:47:52 1993  Steve Chamberlain  (sac@phydeaux.cygnus.com)

	* coffcode.h (get_index, coff_slurp_symbol_table): Fix pointer
	casts to work on machine where sizeof(long) != sizeof(int) !=
	sizeof(char *).
        * coffgen.c (coff_get_normalized_symtab): Ditto.
	* cpu-h8300.c coff-h8300.c: Support for H8/300-H.

Fri Jun  4 15:24:27 1993  Ken Raeburn  (raeburn@cambridge.cygnus.com)

	* coffgen.c (coff_write_symbols): For empty string table, write
	out 4 in correct byte order.  (from minyard@bnr.ca)

	* elf32-hppa.c: Don't include libhppa.h for now; define
	BYTES_IN_WORD instead, until Utah sends a better fix.
	(hppa_elf_build_arg_reloc_stub): Use xmalloc and xrealloc instead
	of malloc and realloc.

Fri Jun  4 07:49:01 1993  Ian Lance Taylor  (ian@cygnus.com)

	* configure.in (mips-*-ecoffl*): New target; use decstation.
	(mips-*-ecoff*): Added trailing '*'.

	* coff-mips.c (ecoff_get_debug): Get the offset from the first PDR
	for the FDR, not from the first PDR in the file.

Thu Jun  3 16:41:10 1993  Stu Grossman  (grossman@cygnus.com)

	* hppa.c (hppa_get_symbol_info):  New func needed for JUMP_TABLE.

Thu Jun  3 15:33:57 1993  David J. Mackenzie  (djm@rtl.cygnus.com)

	* hppa.c (hppa_get_symbol_info): New function.

Thu Jun  3 13:07:42 1993  Ken Raeburn  (raeburn@cambridge.cygnus.com)

	* elfcode.h (elf_map_symbols): Don't crash if no symbols have been
	allocated yet.

	From Peter Hoogenboom (hoogen@schafer.cs.utah.edu):
	* libhppa.h (MAXCOMLEN): Define unconditionally.
	(_PA_RISC_ID): Only define if not already defined.
	* elf32-hppa.c: Include libhppa.h.

	From Ralph Campbell:
	* hosts/mipsbsd.h (HOST_DATA_START_ADDR): Delete definition.

	* elf32-hppa.h (symext_rootP, symext_lastP): Delete decls.
